Add labels and fixVersion